# python_api

./: .env_sample  README.md  pyproject.toml  runserver.py
base/: __init__.py  base_model.py  base_serializer.py  base_views.py
core/: models.py  serializers.py  views.py
python_api_backend/: db.py  server.py  settings.py  urls.py
