[project]
name = "python-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "psycopg>=3.2.12",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.4",
    "sqlalchemy>=2.0.44",
    "python-decouple>=3.8",
    "black>=25.9.0",
    "boto3>=1.40.48",
        "ruff>=0.14.0",


]
[tool.ruff]

line-length = 88
target-version = "py311"


[tool.ruff.lint]

# Enable pyflakes (F), pycodestyle (E), isort (I)
select = ["E", "F", "I"]
ignore = ["F401", "E501"]  # Ignore unused imports everywhere



[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true



[tool.black]
max-line-length = 88 # Or your desired length
